Improved positioning on mobile by fixing 1deg = 1vmin

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -20,7 +20,7 @@ app-celestial-bg {
 
 .time {
   @extend .date;
-  top: 40vh;
+  top: calc(20vh + 20vmin);
 }
 
 .footer {
