--- a/src/app/components/celestial-bg/earth/earth.component.scss
+++ b/src/app/components/celestial-bg/earth/earth.component.scss
@@ -1,11 +1,12 @@
-$diameter: 2000vw;
+$angular-diameter: 179.92134;
+$diameter: calc(tan($angular-diameter * pi/360) * 5vmin * 360/pi);
 
-.ground {
+.earth {
   width: $diameter;
   height: $diameter;
   position: absolute;
+  top: 90vh;
   left: calc(50vw - $diameter / 2);
-  top: 80vh;
   background-color: green;
   border-radius: 100%;
   z-index: 4;
